Pequenos ajustes de fluxo