@@ -2,6 +2,7 @@ package melo.guilhermer.distribuidoraapi.infra.config.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.oauth2.server.resource.OAuth2ResourceServerConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
@@ -9,14 +10,18 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
-public class JWTSecurityConfig {
+public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain configureFilterChain(HttpSecurity http) throws Exception {
-        return http.authorizeRequests(auth -> auth.anyRequest().authenticated())
+        return http.authorizeRequests()
+                .antMatchers(HttpMethod.GET, "/products**").permitAll()
+                .anyRequest().authenticated()
+                .and()
+                .csrf().disable()
                 .cors(c -> c.configurationSource(corsConfigurationSource()))
                 .oauth2ResourceServer(OAuth2ResourceServerConfigurer::jwt).build();
     }
@@ -24,17 +29,10 @@ public class JWTSecurityConfig {
 
     private CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration.applyPermitDefaultValues());
         return source;
     }
-
-    //    @Bean
-//    public JwtDecoder jwtDecoder() {
-//
-//
-//
-//    }
 }
